--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -6,3 +6,13 @@
   text-shadow: 1px 1px 5px #fff;
 }
 /* write your parent styles in here for your App.js */
+
+.card {
+  width: 50%;
+  height: 50%;
+  margin: auto;
+  background-color:rgba(0, 0, 0, 0.5);
+  color: white;
+  margin-top: 20px; 
+  margin-bottom: 20px;
+}
